# faissknn

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  python-publish.yml  release.yml  style.yaml
faissknn/: __init__.py  knn.py
scripts/: gpu_test.sbatch
src/faissknn/: __init__.py  knn.py
tests/: conftest.py  test_knn.py  test_regression.py
