[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.3,<0.10" ]

[project]
name = "faissknn"
version = "0.2.0"
description = "FAISS implementation of multiclass and multilabel K-Nearest Neighbors Classifiers."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Isaac Corley", email = "isaac.corley@proton.me" },
]
requires-python = ">=3.11,<3.15"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
  # faiss-cpu is the default backend — works everywhere with no GPU, CUDA
  # driver, or system toolkit required. For GPU acceleration, install an
  # opt-in CUDA extra ([cuda] or [cu13]) and follow the swap recipe in the
  # README (the CUDA wheels ship the same `faiss` module as faiss-cpu and
  # cannot cleanly coexist, so the extra is a one-time manual choice).
  "faiss-cpu>=1.8,<2",
  "numpy>=2,<3",
  "torch>=2,<3",
]

# Opt-in GPU backends. uv/pip can't introspect the host CUDA driver, so the
# choice is manual. faiss-cpu, faiss-cuda-cu128, and faiss-cuda all provide
# the same `faiss` Python module and cannot cleanly coexist; follow the swap
# recipe in the README.
#   * cuda  -> faiss-cuda-cu128 (CUDA 12.8 wheels, driver R525+; also runs on
#              CUDA 13 via NVIDIA forward-compat, minus the sm_100 arch)
#   * cu13  -> faiss-cuda (CUDA 13 wheels with sm_100/Blackwell baked in)
optional-dependencies.cu13 = [ "faiss-cuda>=1.14.1.post3,<2" ]
optional-dependencies.cuda = [ "faiss-cuda-cu128>=1.14.1.post1,<2" ]

[dependency-groups]
dev = [
  "ipykernel>=7.0.1",
  "ipywidgets>=8.1.7",
  "pre-commit>=4.3",
  "pytest>=8.4.2",
  "pytest-cov>=7",
  "ruff>=0.14.1",
  "scikit-learn>=1,<2",
  "ty>=0.0.1a23",
]

[tool.ruff]
target-version = "py312"
line-length = 100
force-exclude = true

lint.extend-select = [
  "ANN",  # flake8-annotations
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "EXE",  # flake8-executable
  "FA",   # flake8-future-annotations
  "FLY",  # flynt
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "PERF", # Perflint
  "PGH",  # pygrep-hooks
  "PIE",  # flake8-pie
  "PT",   # flake8-pytest-style
  "PYI",  # flake8-pyi
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",
  "SIM",  # flake8-simplify
  "SLOT", # flake8-slots
  "TCH",  # flake8-type-checking
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle warnings
]
lint.ignore = [
  "ANN401",
  "COM812",
  "COM819",
  "D206",
  "D300",
  "E111",
  "E114",
  "E117",
  "PT011",
  "PT012",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "RET505",
  "RET506",
  "RUF005",
  "SIM108",
  "TRY003",
  "UP038",  # https://github.com/astral-sh/ruff/issues/7871
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "W191",
]
lint.extend-per-file-ignores."tests/**" = [
  "ANN001",
  "ANN201",
  "RUF029",
  "SIM117",
  "SIM300",
]

lint.isort.known-first-party = [ "faissknn" ]

[tool.pytest.ini_options]
testpaths = [ "tests" ]

[tool.numpydoc_validation]
checks = [
  "GL06",
  "GL07",
  "GL09",
  "GL10",
  "SS01",
  "SS02",
  "SS03",
  "SS04",
  "PR01",
  "PR02",
  "PR03",
  "PR04",
  "PR05",
  "PR06",
  "RT01",
  "RT02",
  "RT03",
]
# Skip private helpers (e.g. `_neighbor_label_sums`) and `__del__` —
# they aren't part of the public docs surface.
exclude = [ '\._', '\.__' ]
