# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
[metadata]
name = faissknn
version = attr: faissknn.__version__
author = Isaac Corley
author_email = isaac.corley@my.utsa.edu
description = Faiss implementation of multiclass and multilabel K-Nearest Neighbors Classifiers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isaaccorley/faissknn
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = pytorch, machine learning, deep learning

[options]
install_requires =
    numpy
python_requires = >=3.9,<4
packages = find:

[options.packages.find]
include = faissknn*

[options.extras_require]
dev =
    black
    isort
    pytest
    mypy
    scikit-learn

[flake8]
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
exclude =
    # Python
    build/,
    dist/,
    .cache/,
    .mypy_cache/,
    .pytest_cache/,
    __pycache__/,
    *.egg-info/,

    # Git
    .git/,
    .github/,